# libpostal-reborn

./: .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  Address Data Augmentation.ipynb  Address Matching Categorical Classifier.ipynb  Address Matching Deep Dive.ipynb  Address Matching with Libpostal and Deep Learning.ipynb  Dockerfile  Fine-Tuned Sentence Transformer.ipynb  Libpostal Reborn.ipynb  Lowercase Sentence Transformer.ipynb  Name Matching with Sentence Transformers.ipynb  PyCountry Nation Matching.ipynb  README.md  Simple Matching.ipynb  docker-compose.yml  pyproject.toml  tests.py  utils.py
