[tool.poetry]
name = "libpostal-reborn"
version = "0.1.0"
description = "Source code for blog post: Libpostal, Reborn!"
authors = ["Russell Jurney <russell.jurney@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cpu"
priority = "explicit"

[project]
name = "libpostal-reborn"
version = "0.1.0"

[tool.poetry.urls]
"Blog Post" = "https://"
"Code Repository" = "https://github.com/rjurney/libpostal-reborn"
"Bug Tracker" = "https://github.com/rjurney/libpostal-reborn/issues"

[tool.poetry.dependencies]
python = "^3.11"
postal = "^1.1.10"
ipython = "^8.24.0"
numpy = "^1.26.4"
sentence-transformers = { version = "^3.0.0", extras = ["torch"] }
pandas = "^2.2.2"
tqdm = "^4.66.2"
requests = "^2.31.0"
scikit-learn = "^1.4.2"
fuzzywuzzy = "^0.18.0"
scipy = "^1.13.0"
lxml = "^5.2.1"
pycountry = "^23.12.11"
openai = "^1.30.3"
langchain = "^0.2.1"
langchain-openai = "^0.1.7"
python-levenshtein = "^0.25.1"
datasets = "^2.19.1"
pyarrow = "^16.1.0"
transformers = "^4.41.1"
diskcache = "^5.6.3"
wandb = "^0.17.0"
jupyter = "^1.0.0"
postal-codes-tools = "^1.1.3"
accelerate = "^0.30.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = { version = "^24.4.2", extras = ["jupyter"] }
isort = "^5.13.2"
flake8 = "7.0.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
pre-commit = "^3.7.0"
pandas-stubs = "^2.2.1.240316"
types-tqdm = "^4.66.0.20240417"
tqdm-stubs = "^0.2.1"
nbdime = "^4.0.1"
jupyter-black = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.py$'
src = "."

[tool.isort]
profile = "black"
src_paths = ["."]

[tool.mypy]
python_version = "3.11"
mypy_path = ["."]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
python_files = "distance.py"  # Include all Python files in the test discovery.
testpaths = ["."]  # Look for tests in the root directory.
